<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="@string/devices_header"
        app:iconSpaceReserved="false">

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="autoplay"
            android:summaryOff="@string/autoplay_off"
            android:summaryOn="@string/autoplay_on"
            android:title="@string/autoplay_title"
            app:iconSpaceReserved="false" />

        <MultiSelectListPreference
            android:defaultValue="@array/device_list_defaults"
            android:dependency="autoplay"
            android:dialogTitle="@string/device_list_dialog_title"
            android:entries="@array/device_list_entries"
            android:entryValues="@array/device_list_values"
            android:key="device_list"
            android:summary="@string/device_list_summary"
            android:title="@string/device_list_title"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/system_header"
        app:iconSpaceReserved="false">

        <ListPreference
            android:defaultValue="brown"
            android:entries="@array/sound_entries"
            android:entryValues="@array/sound_values"
            android:key="sound"
            android:title="@string/sound_title"
            app:iconSpaceReserved="false"
            app:useSimpleSummaryProvider="true" />

        <SeekBarPreference
            android:defaultValue="10"
            android:key="volume"
            android:max="100"
            android:summary="@string/volume_summary"
            android:title="@string/volume_title"
            app:iconSpaceReserved="false"
            app:min="0"
            app:showSeekBarValue="true" />

    </PreferenceCategory>

</PreferenceScreen>
